cmake_minimum_required(VERSION 3.29)
project(chapter2)

set(CMAKE_CXX_STANDARD 14)

add_executable(chapter2
    chapter2,a.cpp
    chapter2,aa.cpp
    chapter2,ab.cpp
    chapter2,ac.cpp
    chapter2,ad.cpp
    chapter2,ae.cpp
    chapter2,b.cpp
    chapter2,c.cpp
    chapter2,d.cpp
    chapter2,e.cpp
    chapter2,f.cpp
    chapter2,g.cpp
    chapter2,h.cpp
    chapter2,i.cpp
    chapter2,j.cpp
    chapter2,k.cpp
    chapter2,l.cpp
    chapter2,m.cpp
    chapter2,n.cpp
    chapter2,o.cpp
    chapter2,p.cpp
    chapter2,q.cpp
    chapter2,r.cpp
    chapter2,s.cpp
    chapter2,t.cpp
    chapter2,u.cpp
    chapter2,v.cpp
    chapter2,w.cpp
    chapter2,x.cpp
    chapter2,y.cpp
    chapter2,z.cpp)
